--- a/Lab2/facebook/facebook.html
+++ b/Lab2/facebook/facebook.html
@@ -1,5 +1,5 @@
 <html>
-<title>Facebook Style Homepage Design using HTML and CSS</title>
+<title>Facebook Style Homepage Design</title>
 <head>
 <link type="text/css" rel="stylesheet" href="style.css" />
 <link rel="icon" href="face.png" width=50 height=150>
