--- a/Lab3/ToDo app/todo.html
+++ b/Lab3/ToDo app/todo.html
@@ -3,6 +3,7 @@
         <head>
             <title>ToDo List</title>
             <meta charset="utf-8">
+            <script src="https://kit.fontawesome.com/9c5ff90e11.js" crossorigin="anonymous"></script>
             <link rel="stylesheet" type="text/css" href="style.css">
         </head>
         <body>
@@ -18,7 +19,7 @@
                         <input type="text" id="task-description">
                     </div>
                     <div class="add">
-                        <button id="add-task-button">Add</button>
+                        <button id="add-task-button"><i class="fa-solid fa-plus" style="color: rgb(185, 30, 199)"></i></button>
                     </div>
                 </div>
             </div>
